--- a/views/admin-orders.ejs
+++ b/views/admin-orders.ejs
@@ -100,8 +100,8 @@
                     <button class="submit-btn-orders" id="submit-btn"onclick="obtenerOrdenID(`${orderID.value}`)">Buscar</button>
                 </div>
             </div>
-            <div class="container">
-            <div class="table-container">
+            <div class="container-OrderId">
+            <div class="table-container-orderID">
                 <table class="table-product">
                     <thead>
                         <tr>
@@ -109,7 +109,7 @@
                             <th>Producto</th>
                             <th>Descripción</th>
                             <th>Cantidad</th>
-                            <th>Precio</th>
+                            <th class="containerOriceId">Precio</th>
                         </tr>
                     </thead>
                     <tbody id="table-body-orderID">
