--- a/scss/pages/_orders.scss
+++ b/scss/pages/_orders.scss
@@ -80,6 +80,40 @@ body {
     overflow-x: scroll;
 }
 
+.table-container-orderID{
+    display: flex;
+    flex-direction: column; 
+    padding: 1rem;
+    // width: 100vw;
+    width:50rem;
+    overflow-x: scroll;
+    margin-top: -3rem;
+    // margin-left: 0.5rem
+
+}
+.containerImageId{
+    width: 2rem !important;
+}
+.containerOriceId{
+    width: 3rem !important;
+}
+.product__img-cell-Order{
+    width: 1rem !important;
+}
+
+.container-OrderId {
+    display: flex;
+    flex-direction: column;    
+    /* padding: 2rem;
+    border: 3px solid salmon; */
+
+    // padding: 0.5rem;
+    
+}
+
+
+
+
 .table-product {
     border-collapse: collapse;
 }
