--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1333,6 +1333,10 @@ body {
 .product__name {
   width: 10%;
 }
+.product__descCant {
+  width: 30%;
+  text-align: center;
+}
 .product__desc {
   width: 30%;
 }
