--- a/scss/pages/_admin-product.scss
+++ b/scss/pages/_admin-product.scss
@@ -172,6 +172,10 @@ body {
     &__name{
         width: 10%;
     }
+    &__descCant {
+        width: 30%;
+        text-align: center;
+    }
     &__desc {
         width: 30%;
     }
