--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1942,7 +1942,7 @@ body {
   display: flex;
   flex-direction: column;
   padding: 1rem;
-  width: 50rem;
+  width: 55rem;
   overflow-x: scroll;
   margin-top: -3rem;
 }
@@ -1952,7 +1952,7 @@ body {
 }
 
 .containerOriceId {
-  width: 3rem !important;
+  width: 5rem !important;
 }
 
 .product__img-cell-Order {
@@ -1964,6 +1964,33 @@ body {
   flex-direction: column;
   /* padding: 2rem;
   border: 3px solid salmon; */
+}
+
+.table-product-order {
+  border-collapse: collapse;
+  width: 55rem;
+}
+
+.table-product-order thead tr {
+  background-color: dodgerblue;
+  color: white;
+}
+
+.table-product-order th, .table-product-order td {
+  border: 1px solid skyblue;
+  font-size: 0.75rem;
+}
+
+.table-product-order tr td:not(:first-child) {
+  padding: 0.5rem;
+}
+
+.table-product-order tbody tr:nth-child(odd) {
+  background-color: rgb(236, 250, 255);
+}
+
+.table-product-order tr th {
+  padding: 0.5rem;
 }
 
 .table-product {
