--- a/views/admin-orders.ejs
+++ b/views/admin-orders.ejs
@@ -53,7 +53,7 @@
                         <div class="container">
 
                             <div class="table-container">
-                                <table class="table-product">
+                                <table class="table-product-order">
                                     <thead>
                                         <tr>
                                             <th>Usuario</th>
@@ -62,7 +62,7 @@
                                             <th>Cantidad de Productos</th>
                                             <th>Fecha de Creacion</th>
                                             <th>Status</th>
-                                            <th>Acciones</th>
+                                            <th>Acciones</th> 
                                         </tr>
                                     </thead>
                                     <tbody id="table-body-orders">
@@ -109,6 +109,7 @@
                             <th>Producto</th>
                             <th>Descripción</th>
                             <th>Cantidad</th>
+                            <th>Total</th>
                             <th class="containerOriceId">Precio</th>
                         </tr>
                     </thead>
