--- a/views/admin-orders.ejs
+++ b/views/admin-orders.ejs
@@ -109,8 +109,8 @@
                             <th>Producto</th>
                             <th>Descripción</th>
                             <th>Cantidad</th>
-                            <th>Total</th>
-                            <th class="containerOriceId">Precio</th>
+                            <th>Precio</th>
+                            <th class="containerOriceId">Total</th>
                         </tr>
                     </thead>
                     <tbody id="table-body-orderID">
@@ -142,7 +142,6 @@
                 <script src="/js/filter.js"></script>
                 <script src="/js/btnBuy.js"></script>
                 <script src="/js/isAdmin.js"></script>
-                <!-- <script src="/js/orderFinal.js"></script> -->
                 <script src="/js/orderFinalMongoDB.js"></script>
                 <script src="/js/adminOrders.js"></script>
                 <script src="/js/date.js"></script>
