--- a/views/about-us.ejs
+++ b/views/about-us.ejs
@@ -7,7 +7,7 @@
     <%- include('partials/header') %>
 
         <!-- =================TITULO=================  -->
-        
+        <p>hola</p>
     <main class="main">
         <section class="section-info">
             <header class="section-info__header">
