--- a/views/about-us.ejs
+++ b/views/about-us.ejs
@@ -7,8 +7,8 @@
     <%- include('partials/header') %>
 
         <!-- =================TITULO=================  -->
-        <p>hola</p>
-    <main class="main">
+
+    <main class="mainAbout">
         <section class="section-info">
             <header class="section-info__header">
                 <div class="section-info__title-container">
