--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -13,6 +13,21 @@
     // min-height: 100vh;
     height: 100%;
 }
+.mainAbout {
+    // flex-grow: 1;
+    margin-top:30rem;
+    flex-grow: 1;
+    margin-top: 50px;
+    padding-bottom: 2rem;
+    // padding: 1.5rem 0;
+    background-color: rgb(235, 234, 234);
+    // width: fit-content;
+    
+    // padding-bottom:11rem;
+    // position: absolute;
+    // min-height: 100vh;
+    height: 100%;
+}
 body{
 
     min-height: 100vh;
