--- a/views/admin-orders.ejs
+++ b/views/admin-orders.ejs
@@ -100,8 +100,8 @@
                     <button class="submit-btn-orders" id="submit-btn"onclick="obtenerOrdenID(`${orderID.value}`)">Buscar</button>
                 </div>
             </div>
-            <div class="container-OrderId">
-            <div class="table-container-orderID">
+
+            <div class="table-container-order-id">
                 <table class="table-product">
                     <thead>
                         <tr>
@@ -116,7 +116,7 @@
                     <tbody id="table-body-orderID">
                     </tbody>
                 </table>
-            </div>
+
         </div>
 
 
