--- a/scss/pages/_orders.scss
+++ b/scss/pages/_orders.scss
@@ -106,6 +106,11 @@ body {
 .containerImageId{
     width: 2rem !important;
 }
+.headerOrder{
+    margin-top: 1rem;
+    font-size: 1.2rem;
+    padding-left: 1rem;
+}
 .containerOriceId{
     width: 5rem !important;
 }
