--- a/views/admin-orders.ejs
+++ b/views/admin-orders.ejs
@@ -39,7 +39,7 @@
 
                 <div class="">
 
-                    <h1 class="header1">ORDENES</h1>
+                    <h1 class="headerOrder">ORDENES</h1>
 
                     <div class="containerOrder">
 
