--- a/views/register.ejs
+++ b/views/register.ejs
@@ -28,12 +28,12 @@
 
             <div class="register__casillero">
                 <label for="passwordInput" class="register__text1">Contraseña</label> <br>
-                <input type="password" name="password" id="passwordInput" required class="register__password" minlength="6" maxlength="45"> 
+                <input type="password" name="password" id="passwordInput" required class="register__password" minlength="6" maxlength="45" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2, 3}$"> 
             </div>
 
             <div class="register__casillero">
                 <label for="passwordInput2" class="register__text1"> Repetir Contraseña</label> <br>
-                <input type="password" name="password2" id="passwordInput2" required class="register__password" minlength="6" maxlength="45"> 
+                <input type="password" name="password2" id="passwordInput2" required class="register__password" minlength="6" maxlength="45" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2, 3}$"> 
             </div>
 
             <div class="register__casillero">
