--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -10,7 +10,7 @@
             <div class="main2">
                 <div class="Contact-Container">
                     <div class="Contact">
-                        <h1>Contácanos!</h1>
+                        <h1>Contáctanos!</h1>
                         <div class="formContact-Container">
                             <form class="formContact">
                                 <div>
